--- a/source/analysis-7.html.erb
+++ b/source/analysis-7.html.erb
@@ -42,7 +42,7 @@
             <div class="pull-left">Ease of closing</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-green' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-green' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -55,7 +55,7 @@
             <div class="pull-left">Ease of door opening</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -67,7 +67,7 @@
             <div class="pull-left">Ease of unlatching from full latch</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-purple' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-purple' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -79,7 +79,7 @@
             <div class="pull-left">Ease of unlatching from secondary latch</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-turquoise' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-turquoise' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -135,7 +135,7 @@
             <div class="pull-left">Quality of closing noise</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-pink' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-pink' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -147,7 +147,7 @@
             <div class="pull-left">Quality of unlatching and opening noise</div>
 
             <div class="pull-right">
-              <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
+              <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
 
@@ -179,7 +179,7 @@
 </div>
 
 
-<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "analysis-6.html", :link_back => "analysis-6.html" } %>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-8.html", :link_back => "analysis-6.html" } %>
 
 
 <%= partial "partials/javascripts" %>
