--- a/source/analysis-4.html.erb
+++ b/source/analysis-4.html.erb
@@ -141,12 +141,15 @@
   // });
 
   $(document).ready(function(){
+    assign_index();
+  });
+
+  function assign_index() {
     $(".card").each(function(){
       var index = $(this).index();
-      $(this).find( ".contradictions__count" ).text(index+1);  
+      $(this).find( ".contradictions__count" ).text(index+1);
     })
-    
-  });
+  }
 
   $(document).on('click', '.js-move-down', function(){
 
@@ -164,7 +167,7 @@
 
   });
 
-  
+
   $(document).on('click', '.js-move-up', function(){
 
     var card = $(this).parent().parent();
@@ -202,8 +205,10 @@
           "<i class='ionicons ion-android-close color-white js-remove-contradiction'></i>"+
         "</div>"+
         "<div class='contradictions p+'>"+
+            "<div class='contradictions__count animated'></div>"+
+
             "<h1 class='pull-left'><input type='text' class='form-control-2'></h1>"+
-            "<table class='table table-bordered bg-white mb0 contradictions__tb-header'>"+
+            "<table class='table table-bordered bg-white mb0 contradictions__tb-header' style='top:50px;'>"+
               "<tr>"+
                 "<th colspan='2'><div class='text-center'>Action parameter</div></th>"+
               "</tr>"+
@@ -223,8 +228,15 @@
                   "<td class='text-center'><i class='fa fa-2 fa-frown-o color-pink'></i></td>"+
                 "</tr>"+
                 "<tr>"+
-                  "<td valign='center' colspan='3'><a href='#' class='btn btn-outline-grey js-add-row'>Add</a></td>"+
+                  "<td valign='center' style='width: 50%;'><input type='text' class='form-control-2'></td>"+
+                  "<td class='text-center'>"+
+                    "<i class='fa fa-2 fa-frown-o color-pink'></i>"+
+                  "</td>"+
+                  "<td class='text-center'><i class='fa fa-2 fa-frown-o color-pink'></i></td>"+
                 "</tr>"+
+                // "<tr>"+
+                //   "<td valign='center' colspan='3'><a href='#' class='btn btn-outline-grey js-add-row'>Add</a></td>"+
+                // "</tr>"+
               "</tbody>"+
             "</table>"+
         "</div>"+
@@ -237,12 +249,14 @@
 
       $(".cards").prepend(newContradiction);
 
+      assign_index();
+
     });
 
 
 
-    
-    $(document).on('click', '.js-remove-contradiction', function(){
+
+  $(document).on('click', '.js-remove-contradiction', function(){
 
       var $that = $(this);
 
@@ -267,8 +281,8 @@
       "</tr>");
     $(this).parent().parent().before(newRow);
   });
-    
-  
+
+
 
 
 </script>
