added fixes from achille call

--- a/source/account.html.erb
+++ b/source/account.html.erb
@@ -55,7 +55,7 @@
 						<div class="clearfix mb">
 							<%= image_tag "face-1.jpg", class:"pull-left mr- img-circle", width:"60" %>
 							<div class="pull-left text-center">
-								<a href="#" class="btn btn-outline-blue">Download</a><br>
+								<a href="#" class="btn btn-outline-blue">Upload</a><br>
 								<a href="#" class="color-grey font-14">Delete</a>
 							</div>
 						</div>
