--- a/source/analysis-2.html.erb
+++ b/source/analysis-2.html.erb
@@ -60,7 +60,8 @@
           <a href="#" class="btn btn-outline color-white js-edit-technologies">Edit</a>
 
           <div class="mt js-show-input-technologies hidden">
-            <input type="email" class="form-control-2" id="" placeholder="Add technologies">
+            <input type="email" class="form-control-2" placeholder="Add technologies" style="width: 270px; margin-right: 10px; display: inline-block;">
+            <a href="#" class="btn btn-outline color-white" style="display: inline-block; padding-right: 10px; padding-left: 10px">Add</a>
           </div>
 
         </div>
