--- a/source/analysis-7.html.erb
+++ b/source/analysis-7.html.erb
@@ -36,6 +36,10 @@
       </div>
 
 
+      <div class="card card--separator p pt+">
+          <h1 class="text-bold">Noise</h1>
+      </div>
+
       <div class="card card--separator p">
 
           <div class="clearfix">
@@ -150,6 +154,10 @@
               <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
+
+      </div>
+
+      <div class="card card--separator p pt+">
 
       </div>
 
