--- a/source/home-initial.html.erb
+++ b/source/home-initial.html.erb
@@ -12,17 +12,19 @@ title: Welcome to Pixseb
 
 <div class="container">
   <div class="row pt+">
-    
+
     <div class="padded">
       <div class="text-center">
         <h1 class="mb">Start your first SUN Diagram today !</h1>
         <p class="mb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus <br>accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</p>
         <%= link_to("New", "/definition.html" , class:"btn btn-primary") %>
       </div>
-    </div>    
-    
+    </div>
+
   </div>
 </div>
 
+
+<%= partial "partials/javascripts" %>
 
 
