--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -87,7 +87,7 @@
                     <%= link_to("Data Setting", "account.html#data-setting" , class:"dropdown-item") %>
                   </li>
                   <hr>
-                  <li><a href="" class="dropdown-item color-pink mb0">Disconect</a></li>
+                  <li><a href="" class="dropdown-item color-pink mb0">Disconnect</a></li>
                 </ul>
               </div>
             </li>
