--- a/source/partials/_loading.html.erb
+++ b/source/partials/_loading.html.erb
@@ -1,9 +1,6 @@
-<div class="animated bounceInLeft">
-	<div class="loading">
-		<div class="loading__dot"></div>
-		<div class="loading__line"></div>
-		<div class="loading__mask"></div>
-	</div>
-	<p class="animated bounceInLeft text-center text-condensed mt color-grey-light">Saving</p>
+<div class="loading animated bounceInLeft">
+	<div class="loading__dot"></div>
+	<div class="loading__line"></div>
+	<div class="loading__mask"></div>
 </div>
-
+<p class="text-center text-condensed mt color-grey-light">Saving</p>
