--- a/source/analysis-8.html.erb
+++ b/source/analysis-8.html.erb
@@ -90,7 +90,10 @@
 <script>
   $('.btn').click(function(){
     $(this).prev().removeClass('active');
+    $(this).prev().prev().removeClass('active');
+
     $(this).next().removeClass('active');
+    $(this).next().next().removeClass('active');
     $(this).toggleClass('active');
   });
 </script>
